--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
 body{
     font-family: 'Montserrat', sans-serif;
+    /* Encriptador - 1 Desktop */
+
+    position: relative;
+    width: 1440px;
+    height: 1024px;
+
+    /* Light blue/light-blue-100 */
+
+    background: #F3F5FC;
 }
 
 header {
@@ -7,51 +16,10 @@ header {
     padding: 20px 0;
 }
 
-.caja{
-    width: 940px;
-    position: relative;
-    margin: 0 auto;
+.input-padron{
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 25px;
+    width: 50%;
 }
 
-nav{
-    position: absolute;
-    top:110px;
-    right: 0;
-}
-
-nav li{
-    display: inline;
-    margin: 0 0 0 15px;
-}
-
-nav a{
-    text-transform: uppercase;
-    color: #000000;
-    font-weight: bold;
-    font-size: 22px;
-    text-decoration: none;
-}
-
-nav a:hover{
-    color: #c78c19;
-    text-decoration: underline;
-}
-
-.productos{
-    width: 940px;
-    margin: 0 auto;
-    padding: 50px;
-}
-
-
-.productos li{
-    display: inline-block;
-    text-align: center;
-    width: 30%;
-    vertical-align: top;
-    margin: 0 1.5%;
-    padding: 30px 20px;
-    box-sizing: border-box;
-    border: 2px solid #000000;
-    border-radius: 10px;
-}
