--- a/style.css
+++ b/style.css
@@ -20,6 +20,23 @@ header {
      background: #F3F5FC;
 }
 
+.Text_encryptado{
+    /* Rectangle 1 */
+position: absolute;
+width: 400px;
+height: 944px;
+left: 1000px;
+top: 40px;
+
+/* White */
+
+background: #FFFFFF;
+/* shadow */
+
+box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
+border-radius: 32px;
+}
+
 .input-padron{
     display: block;
     margin: 0 0 20px;
