--- a/style.css
+++ b/style.css
@@ -37,10 +37,22 @@ box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
 border-radius: 32px;
 }
 
-.input-padron{
-    display: block;
-    margin: 0 0 20px;
-    padding: 10px 25px;
-    width: 50%;
+.Text{
+position: absolute;
+width: 656px;
+height: 704px;
+left: 240px;
+top: 121px;
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 32px;
+line-height: 150%;
+/* or 48px */
+
+
+color: #0A3871;
+
 }
 
