--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
 border-radius: 32px;
 }
 
-.Text{
+.Texto{
 position: absolute;
 width: 656px;
 height: 704px;
