--- a/style.css
+++ b/style.css
@@ -20,9 +20,7 @@ header {
      background: #F3F5FC;
 }
 
-.Text_encryptado{
-resize: none;
-    /* Rectangle 1 */
+.cuadrado_Texto_encryptado{
 position: absolute;
 width: 400px;
 height: 944px;
@@ -36,6 +34,25 @@ background: #FFFFFF;
 
 box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
 border-radius: 32px;
+}
+
+.Text_encryptado{
+resize: none;
+position: absolute;
+width: 336px;
+height: 781px;
+left: 1032px;
+top: 72px;
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 150%;
+/* or 36px */
+/* Gray/gray-400 */
+
+color: #495057;
 }
 
 .Texto{
