--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ header {
     background-color: #BBBBBB;
     padding: 20px 0;
 }
+.dimensiones{
+    width: 1440px;
+    height: 1024px;
+}
+
 
 .principal{
      /* Encriptador - 1 Desktop */
