modificación del ancho de la pantalla principal

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header {
      /* Encriptador - 1 Desktop */
 
      position: relative;
-     width: 1300px;
+     width: auto;
      height: 617px;
  
      /* Light blue/light-blue-100 */
