--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header {
  
      /* Light blue/light-blue-100 */
  
-     background: #e7fff8;
+     background: #fddef8;
 }
 
 .cuadrado_Texto_encryptado{
@@ -76,7 +76,7 @@ border-radius: 32px;
 
 
     color: #0A3871;
-    background: #e7fff8;
+    background: #fddef8;
   
 }
 
