--- a/style.css
+++ b/style.css
@@ -94,3 +94,27 @@ left: 99px;
 top: 459px;
 
 }
+
+
+
+.Encriptar_Botton{
+    display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 24px;
+gap: 8px;
+
+width: 328px;
+height: 67px;
+
+/* Dark blue/dark-blue-300 */
+
+background: #0A3871;
+border-radius: 24px;
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+}
