--- a/style.css
+++ b/style.css
@@ -140,3 +140,26 @@ top: 493px;
 border: 1px solid #0A3871;
 border-radius: 24px;
 }
+
+.Texto_botton{
+    width: 288px;
+height: 19px;
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 19px;
+text-align: center;
+
+/* Dark blue/dark-blue-300 */
+
+color: #0A3871;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 1;
+}
