--- a/style.css
+++ b/style.css
@@ -166,6 +166,18 @@ header {
     width: 328px;
     height: 67px;
 
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+
+/* White */
+
+color: #FFFFFF;
+
+
     /* Dark blue/dark-blue-300 */
 
     background: #0A3871;
