--- a/style.css
+++ b/style.css
@@ -190,8 +190,8 @@ header {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
+    font-size: 20px;
+    line-height: 24px;
     text-align: center;
 
     /* White */
@@ -233,4 +233,27 @@ header {
     flex: none;
     order: 1;
     flex-grow: 0;
+}
+
+.Texto_Desencriptar_Botton{
+    width: 280px;
+    height: 19px;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+
+    /* Dark blue/dark-blue-300 */
+
+    color: #0A3871;
+
+
+    /* Inside auto layout */
+
+    flex: none;
+    order: 0;
+    flex-grow: 1;
 }
