--- a/style.css
+++ b/style.css
@@ -80,22 +80,6 @@ header {
   
 }
 
-.indicacion{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 0px;
-    gap: 8px;
-
-    position: absolute;
-    width: 252px;
-    height: 18px;
-    left: 99px;
-    top: 459px;
-
-}
-
-
 .Botton_copiar{
     box-sizing: border-box;
     /* Auto layout */
@@ -257,6 +241,20 @@ header {
     flex-grow: 1;
 }
 
+.advertencia{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0px;
+    gap: 8px;
+
+    position: absolute;
+    width: 229px;
+    height: 18px;
+    left: 240px;
+    top: 851px;
+
+}
 
 .imagen-advertencia{
 width: 16px;
@@ -268,4 +266,32 @@ height: 16px;
 flex: none;
 order: 0;
 flex-grow: 0;
+}
+
+
+
+.indicacion{
+    width: 205px;
+    height: 18px;
+    
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 150%;
+    /* identical to box height, or 18px */
+    
+    
+    /* Gray/gray-400 */
+    
+    color: #495057;
+    
+    opacity: 0.8;
+    
+    /* Inside auto layout */
+    
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+
 }
