se agrega una imagen para el foooter

--- a/style.css
+++ b/style.css
@@ -319,7 +319,7 @@ header {
 
 footer{
     text-align: center;
-    background: url(bg.jpg);
+    background: url(548.jpg);
     padding: 40px;
 }
 
@@ -328,3 +328,4 @@ footer{
     font-size: 13px;
     margin: 20px;
 }
+ 
