--- a/style.css
+++ b/style.css
@@ -319,8 +319,8 @@ header {
 
 footer{
     text-align: center;
-    background: url(548.jpg);
-    padding: 80px;
+    background: url(fondo_degradado.jpg);
+    padding: 40px;
 }
 
 .copyright{
