modificacion del dondo del background

--- a/style.css
+++ b/style.css
@@ -319,7 +319,8 @@ header {
 
 footer{
     text-align: center;
-    background: url(fondo_degradado.jpg);
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(244,25,191,0.9528186274509804) 41%, rgba(0,212,255,1) 100%);
     padding: 40px;
 }
 
