--- a/style.css
+++ b/style.css
@@ -339,10 +339,19 @@ footer{
     transform: scale(1.3);
 }
 
+.logo_linke{
+    width: 40px;
+    height: 40px;
+}
+
+.logo_linke:hover{
+    transform: scale(1.3);
+}
+
 .imagenes_footer {
     display: flex;
   }
   
-  .imagenes_footer img:first-child {
+.imagenes_footer img:first-child {
     margin-right: 10px;
   }
