--- a/style.css
+++ b/style.css
@@ -350,8 +350,9 @@ footer{
 
 .imagenes_footer {
     display: flex;
+    margin: 0 auto;
   }
   
 .imagenes_footer img:first-child {
-    margin-right: 10px;
+    margin-right: 30px;
   }
