--- a/style.css
+++ b/style.css
@@ -350,7 +350,7 @@ footer{
 
 .imagenes_footer {
     display: flex;
-    margin: 0 auto;
+    justify-content: center;
   }
   
 .imagenes_footer img:first-child {
