--- a/style.css
+++ b/style.css
@@ -333,6 +333,7 @@ footer{
 .logo_git{
     width: 40px;
     height: 40px;
+    transition: 1s all;
 }
 
 .logo_git:hover{
@@ -342,6 +343,7 @@ footer{
 .logo_linke{
     width: 40px;
     height: 40px;
+    transition: 1s all;
 }
 
 .logo_linke:hover{
