--- a/style.css
+++ b/style.css
@@ -19,10 +19,10 @@ header {
  
      /* Light blue/light-blue-100 */
  
-     background: #fffbd5;  /* fallback for old browsers */
-     background: -webkit-linear-gradient(to right, #b20a2c, #fffbd5);  /* Chrome 10-25, Safari 5.1-6 */
-     background: linear-gradient(to right, #b20a2c, #fffbd5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-     
+    background: #fffbd5;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #fffbd5, #b20a2c);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right,  #fffbd5, #b20a2c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
      
 }
 
@@ -78,7 +78,7 @@ header {
     line-height: 150%;
     /* or 48px */
 
-
+    opacity: 0.6;
     color: #0A3871;
     
   
